--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -12,6 +12,50 @@
         <h1>Order your taco creations!</h1>
 
         <img th:src="@{/images/image.jpg}"/>
+        <a th:href="@{/design}" id="another">Design another taco</a> <br/>
+
+        <div th:if="${#fields.hasErrors()}">
+            <span class="validationError">
+            Please correct the problems below and resubmit.
+            </span>
+        </div>
+
+        <h3>Deliver my taco masterpieces to...</h3>
+
+        <label for="deliveryName">Name: </label>
+        <input type="text" th:field="*{deliveryName}"/>
+        </br>
+
+        <label for="deliveryStreet">Street: </label>
+        <input type="text" th:field="*{deliveryStreet}"/>
+        </br>
+
+        <label for="deliveryCity">City: </label>
+        <input type="text" th:field="*{deliveryCity}"/>
+        </br>
+
+        <label for="deliveryState">State: </label>
+        <input type="text" th:field="*{deliveryState}"/>
+        </br>
+
+        <label for="deliveryZip">Zip: </label>
+        <input type="text" th:field="*{deliveryZip}"/>
+        </br>
+
+        <h3>Here's how I'll pay...</h3>
+        <label for="ccNumber">Credit Card #: </label>
+        <input type="text" th:field="*{ccNumber}"/>
+        <br/>
+
+        <label for="ccExpiration">Expiration: </label>
+        <input type="text" th:field="*{ccExpiration}"/>
+        <br/>
+
+        <label for="ccCVV">CVV: </label>
+        <input type="text" th:field="*{ccCVV}"/>
+        <br/>
+
+        <input type="submit" value="Submit order"/>
 
     </form>
 
